# kobo2readwise

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  fly.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
static/: about.html  index.html
tests/: test_sync.py
